Fix board members on mobile

--- a/src/styles/components/_dialog.sass
+++ b/src/styles/components/_dialog.sass
@@ -255,6 +255,8 @@
 				width: 45%
 				border-bottom: 1px solid
 				border-color: $gallery
+				@media screen and (max-width: 450px)
+					width: 100%
 
 				.user-name
 					width: 60%
@@ -275,7 +277,8 @@
 				border-bottom: 1px solid
 				border-color: $gallery
 				color: $silver-chalice
-
+				@media screen and (max-width: 450px)
+					width: 100%
 				.user-name
 					width: 60%
 					float: left
